# job-count

./: .gitignore  README.md  pyproject.toml
job_count/: __init__.py  browser.py  cli.py  main.py  types.py
linkedin_job_count/: __init__.py  browser.py  cli.py  logging.py  main.py
sample_data/: input.csv  output.csv
