[tool.poetry]
name = "linkedin-job-count"
version = "0.0.1"
description = ""
authors = ["Archie Judd"]
readme = "README.md"
packages = [{include = "linkedin_job_count" }]

[tool.poetry.scripts]
linkedin-job-count = "linkedin_job_count.main:main"

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
selenium = "^4.28.1"
pydantic = "^2.10.6"
pyinstaller = "^6.11.1"

[tool.poetry.group.dev.dependencies]
pylint = "^2.17.4"
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
