[project]
name = "linkedin-job-count"
version = "0.0.1"
description = ""
readme = "README.md"
dependencies = [
    "pydantic>=2.10.6",
    "selenium>=4.28.1",
]
requires-python = ">=3.13"

[tool.uv]
package = true

[project.scripts]
linkedin-job-count = "linkedin_job_count.main:main"

[dependency-groups]
lint = [
    "ruff>=0.9.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
